--- a/dustynadam2015/css/main.css
+++ b/dustynadam2015/css/main.css
@@ -3,7 +3,6 @@ body {
 	background-color: #cccccc;
 	font-family: 'eb garamond', serif;
 	color: #E8E8E8;
-
 }
 p {
 	font-size: 20px;
@@ -25,4 +24,20 @@ h1 {
 }
 a {
 	color: #E8E8E8;
+}
+
+.header {
+	margin: 15px 0;
+}
+
+/*.hide-mobile {
+	display: none;
+}
+*/
+/*@screen-sm-min = 768*/
+/*@screen-md-min = 992*/
+@media screen and (max-width: 600) {
+	.hide-mobile {
+		display: none;
+	}
 }
